--- a/tasks/mpm.yml
+++ b/tasks/mpm.yml
@@ -5,9 +5,19 @@
   register: _apache_result_mpm_query
   changed_when: _apache_result_mpm_query.rc != 0
 
+- name: "Debug command output"
+  ansible.builtin.debug:
+    var: _apache_result_mpm_query.stdout_lines
+
 - name: "Set current MPM"
   ansible.builtin.set_fact:
     _apache_current_mpm: "{{ _apache_result_mpm_query.stdout_lines | select('search', '^Server MPM:') | first | regex_replace('^Server MPM:\\s+(\\S+)$', '\\1') }}"
+  when: _apache_result_mpm_query.stdout_lines | select('search', '^Server MPM:') | length > 0
+
+- name: "Fail if MPM not found"
+  ansible.builtin.fail:
+    msg: "Could not determine current MPM"
+  when: _apache_result_mpm_query.stdout_lines | select('search', '^Server MPM:') | length == 0
 
 - name: "Adding MPM configuration file"
   ansible.builtin.template:
